# idea-validator-bot

./: .gitignore  bot.py  datamodels.py  prompts.py  pyproject.toml
structuredllm/: llm_wrapper.py
